force-app/main/default/objects/Cruise_Cabin_Booking__c/Cruise_Cabin_Booking__c.object-meta.xml
<CustomObject>
    <label>Cruise Cabin Booking (Old)</label>
    <nameField>
        <displayFormat>CCB{0000000}</displayFormat>
        <label>Cruise Cabin Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Cabin Bookings (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>