force-app/main/default/objects/Cruise_Cabin_Booking__c/fields/cruise_booking_reference__c.field-meta.xml
<CustomField>
    <fullName>cruise_booking_reference__c</fullName>
    <label>Cruise Booking Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>