force-app/main/default/objects/Cruise_Cabin_Booking__c/fields/cruise_company__c.field-meta.xml
<CustomField>
    <fullName>cruise_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cruise Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cruise Company must be of Record Type &quot;Product Partner&quot; - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Product Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cruise_Cabin_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>