force-app/main/default/objects/Cruise_Cabin_Booking__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipName>Cruise_Cabin_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>