force-app/main/default/objects/Cruise_Cabin_Booking__c/fields/ship_sail_date__c.field-meta.xml
<CustomField>
    <fullName>ship_sail_date__c</fullName>
    <label>Ship Sail Date</label>
    <type>Date</type>
</CustomField>